# events-api

./: .env.template  .gitignore  README.md  docker-compose.dev.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/apps/api/: urls.py
backend/apps/events/: models.py  permissions.py  serializers.py  services.py  urls.py  views.py
backend/apps/events/migrations/: 0001_initial.py  0002_event_participants.py
backend/apps/users/: models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/config/: celery.py  urls.py
backend/config/settings/: base.py  dev.py  prod.py
backend/templates/events/email/: event_registration_success_message.html  event_registration_success_message.txt  event_registration_success_subject.txt
